sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: recursive variable i needs type
var i=getValeur(i);
                ^AlgBubbleSort1:7: error: reassignment to val
		if (plusPetit(i,j)) { i=i+1 }
                                       ^