sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
var i=getValeur(i);
var j=getValeur(i+1);	
	for (i<- 0 to getNombreValeurs()-2) {
		
		if (plusPetit(i,j)) { i=i+1 }
		else { echange(i,i+1);}
		
	}
}
